--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^4.14.1",
     "axios": "^1.4.0",
     "chart.js": "^4.1.2",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.1.2",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
