--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.2",
     "@prisma/client": "^4.14.1",
+    "argon2": "^0.30.3",
     "axios": "^1.4.0",
     "chart.js": "^4.1.2",
     "jsonwebtoken": "^9.0.0",
@@ -21,7 +22,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-toastify": "^9.1.3",
-    "sweetalert2": "^11.4.8"
+    "sweetalert2": "^11.4.8",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
