--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "axios": "^1.4.0",
     "chart.js": "^4.1.2",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "next": "13.1.2",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-toastify": "^9.1.3",
+    "styled-components": "^5.3.11",
     "sweetalert2": "^11.4.8",
     "zustand": "^4.3.8"
   },
